--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "description": "Minimal Bun + TypeScript + SQLite todo app",
   "scripts": {
-    "start": "bun run src/server.ts",
+    "setup": "bun install",
+    "start": "bun --hot run src/server.ts",
     "dev": "bun --hot run src/server.ts",
-    "reset-db": "rm -f do-the-other-stuff.sqlite"
+    "reset-db": "rm -f do-the-other-stuff.sqlite",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "applesauce-core": "4.0.0",
@@ -15,5 +18,10 @@
     "rxjs": "7.8.1"
   },
   "type": "module",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.48.0",
+    "@typescript-eslint/parser": "^8.48.0",
+    "eslint": "^9.39.1"
+  }
 }
